syntax = "proto3";
package tendermint.crypto;

option go_package = "github.com/fdymylja/tmos/core/abci/tendermint/crypto";

// PublicKey defines the keys available for use with Tendermint Validators
message PublicKey {
  oneof sum {
    bytes ed25519   = 1;
    bytes secp256k1 = 2;
    bytes sr25519   = 3;
  }
}
