syntax = "proto3";
package tmos.x.authn.crypto.v1alpha1;

option go_package = "github.com/fdymylja/tmos/x/authn/crypto/secp256k1";

// PubKey defines a secp256k1 public key
// Key is the compressed form of the pubkey. The first byte depends is a 0x02 byte
// if the y-coordinate is the lexicographically largest of the two associated with
// the x-coordinate. Otherwise the first byte is a 0x03.
// This prefix is followed with the x-coordinate.
message PubKey {
  bytes key = 1;
}

// PrivKey defines a secp256k1 private key.
message PrivKey {
  bytes key = 1;
}
